--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "zaVXBtmtcUO5dQM27",
+      });
+   })();
+</script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
